--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,5 +1,4 @@
-<%- model_class = Question -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human %></h1>
+   <h1><%=t '.title', :default => 'New %{model_name}', :model_name => @model_name %></h1>
 </div>
 <%= render :partial => 'form' %>
