Add file upload to new question form with some jQuery

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <title><%= content_for?(:title) ? yield(:title) : "Trivia" %></title>
     <%= csrf_meta_tags %>
     <%= render 'layouts/shims' %>
+    <script src="/assets/jquery.js?body=1" type="text/javascript"></script>
   </head>
   <body>
 
