--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,8 +1,27 @@
 <%= simple_form_for @question, :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.input :body %>
+  <div class='control-group'>
+    <%= f.label :body, 'Question Text:', :class =>'control-label' %>
+    <div class='controls'>
+      <%= f.text_field :body, :class => 'input-large' %>
+    </div>
+  </div>
+  <div class='control-group'>
+    <%= f.label :image, :class => 'control-label' %>
+    <div class='controls'>
+      <%=f.file_field :image, :id => 'lefile', :style => 'display:none' %>
+      <div class="input-append">
+        <input id="photoCover" type="text">
+        <a class="btn" onclick="$('input[id=lefile]').click();">Browse</a>
+      </div>
+    </div>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 questions_path, :class => 'btn' %>
   </div>
 <% end %>
+<script type="text/javascript">
+$('input[id=lefile]').change(function()  {
+    $('#photoCover').val($(this).val());
+});
+</script>
