--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,10 +2,13 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
-
+<div>
+  <%= image_tag :image %>
+</div>
 <dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:body) %>:</strong></dt>
+  <dt><strong>Question:</strong></dt>
   <dd><%= @question.body %></dd>
+
 </dl>
 
 <div class="form-actions">
