--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,7 +3,7 @@
   <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
 <div>
-  <%= image_tag :image %>
+  <%= image_tag @question.image_url %>
 </div>
 <dl class="dl-horizontal">
   <dt><strong>Question:</strong></dt>
