--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -8,8 +8,10 @@
   <div class='control-group'>
     <%= f.label :image, 'Image:', :class => 'control-label' %>
     <div class='controls'>
-      <%=f.file_field :image, :id => 'lefile', :style => '' %>
+      <%=f.file_field :image, :id => 'lefile', :style => 'display:none' %>
       <div class="input-append">
+        <input id="photoCover" type="text">
+        <a class="btn" onclick="$('input[id=lefile]').click();">Browse</a>
       </div>
     </div>
   <div class="form-actions">
