--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,14 +2,15 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
-<div>
-  <%= image_tag @question.image_url %>
+<div class="span2 imageThumb">
+  <%= image_tag @question.image_url(:thumb), :class => 'img-polaroid thumb' %>
 </div>
+<div class = "span4 questionText"
 <dl class="dl-horizontal">
   <dt><strong>Question:</strong></dt>
   <dd><%= @question.body %></dd>
-
 </dl>
+</div>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
