--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,4 +1,4 @@
 <div class="page-header">
-   <h1><%=t '.title', :default => 'New %{model_name}', :model_name => @model_name %></h1>
+   <h1><%=t '.title', :default => 'New Question' %></h1>
 </div>
 <%= render :partial => 'form' %>
