clean up registration edit page

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -5,3 +5,20 @@
   To use Glyphicons sprites instead of Font Awesome, replace with "require twitter-bootstrap-static/sprites"
   =require twitter-bootstrap-static/fontawesome
   */
+
+.danger {
+  color: red;
+}
+
+.danger:visited {
+  color: red;
+}
+
+.danger:hover {
+  color: rgb(153, 8, 8);
+  text-decoration: none;
+  background-color: white;
+}
+
+.brand:hover {
+  background-color: lightgrey;
