--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,25 +3,46 @@
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
+  <div class='form-horizontal'>
+    <div class='control-group'>
+      <%= f.label :email, :class => 'control-label', :required => true %>
+      <div class='controls'>
+        <%= f.text_field :email, :required => true, :autofocus => true %>
+      </div>
+    </div>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :password, :autocomplete => "off", :hint => " leave it blank if you don't want to change it", :required => false %>
-    <%= f.input :password_confirmation, :required => false %>
-    <%= f.input :current_password, :hint => " we need your current password to confirm your changes", :required => true %>
+    <div class='control-group'>
+      <%= f.label :password, :class => 'control-label' %>
+      <div class='controls'>
+        <%= f.text_field :password, :autocomplete => "off", :hint => " leave it blank if you don't want to change it", :required => false %>
+      </div>
+    </div>
+    <div class='control-group'>
+      <%= f.label :password_confirmation, 'Confirmation', :class => 'control-label' %>
+      <div class='controls'>
+        <%= f.text_field :password_confirmation, :required => false %>
+      </div>
+    </div>
+    <div class='control-group'>
+      <%= f.label :current_password, :class => 'control-label', :required => true %>
+      <div class='controls'>
+    <%= f.text_field :current_password, :hint => " we need your current password to confirm your changes", :required => true %>
+      </div>
+    </div>
+
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "Update", :class => 'btn btn-primary' %>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'danger' %></p>
 
 <%= link_to "Back", :back %>
