More devise pages cleanup

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -22,3 +22,9 @@
 
 .brand:hover {
   background-color: lightgrey;
+}
+
+.form-horizontal .control-label {
+  width: 200px;
+  padding-right: 5px;
+}
