--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,8 +8,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+    <%= f.button :submit, "Send me reset password instructions", :class => 'btn btn-primary' %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
