--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
               <li class="nav-header">Links:</li>
               <li><%= link_to "Home", root_path  %></li>
               <li><%= link_to "Questions", questions_path  %></li>
-              <li><%= link_to "Answers", answers_path  %></li>
+              <!-- <li><%#= link_to "Answers", answers_path  %></li> -->
             </ul>
           </div><!--/.well-->
         </div><!--/span-->
