--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -42,6 +42,7 @@
 </table>
 
 <div class="form-actions">
+  <%= link_to 'New Answer', new_question_answer_path(@question.id), :class => 'btn btn-primary' %>
   <%= link_to t('.back', :default => t("helpers.links.back")),
               questions_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
