--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -25,6 +25,7 @@
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
+          <%= link_to 'New Answer', new_answer_path %>
         </td>
       </tr>
     <% end %>
