--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -31,7 +31,7 @@
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_answer_path(answer), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      answer_path(answer),
+                      question_answer_path(answer),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
