--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,15 +3,30 @@
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
-    <%= f.input :password, :required => true %>
-    <%= f.input :password_confirmation, :required => true %>
+  <div class="form-horizontal">
+    <div class="control-group">
+      <%= f.label :email, :class => 'control-label', :required => true %>
+      <div class="controls">
+        <%= f.text_field :email, :autofocus => true, :required => true %>
+      </div>
+    </div>
+    <div class="control-group">
+      <%= f.label :password, :class => 'control-label', :required => true %>
+      <div class="controls">
+        <%= f.text_field :password, :type => 'password', :required => true %>
+      </div>
+    </div>
+    <div class="control-group">
+      <%= f.label :password_confirmation, :class => 'control-label', :required => true %>
+      <div class="controls">
+        <%= f.text_field :password_confirmation, :type => 'password', :required => true %>
+      </div>
+    </div>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", :class => 'btn btn-primary' %>
   </div>
 <% end %>
 
-<%= render "users/shared/links" %>
+<%= render "devise/shared/links" %>
