--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -25,7 +25,7 @@
             <% question.answers.each do |answer| %>
               <tr>
                <td><%= answer.body %></td>
-               <td><%= answer.created_at %></td>
+               <td><%= "#{time_ago_in_words(answer.created_at)}" %></td>
                <!-- <td><%#= answer. %></td> -->
               </tr>
             <% end %>
@@ -34,7 +34,7 @@
         </td>
         <td><%= link_to question.id, question_path(question) %></td>
         <td><%= link_to question.body, question_path(question) %></td>
-        <td><%=l question.created_at %></td>
+        <td><%= "#{time_ago_in_words(question.created_at)}" %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_question_path(question), :class => 'btn btn-mini' %>
