Clean up look and feel

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -5,9 +5,8 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Show Answers</th>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:body) %></th>
+      <th>Question:</th>
+      <th></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -15,25 +14,26 @@
   <tbody>
     <% @questions.each do |question| %>
       <tr>
-      <td class="toggleable">
-          <%= link_to "+", "#", :class => "toggle-link" %>
-          <div id ="transactions_form" class="toggle-target" style="display:none">
-            <table>
-            <th>Answer</th>
-            <th>Created at:</th>
-            <!-- <th>Created by:</th> -->
-            <% question.answers.each do |answer| %>
-              <tr>
-               <td><%= answer.body %></td>
-               <td><%= "#{time_ago_in_words(answer.created_at)}" %></td>
-               <!-- <td><%#= answer. %></td> -->
-              </tr>
-            <% end %>
-            </table>
-          </div>
-        </td>
-        <td><%= link_to question.id, question_path(question) %></td>
-        <td><%= link_to question.body, question_path(question) %></td>
+      <td><%= link_to question.body, question_path(question) %></td>
+      <% if !question.answers.empty? %>
+        <td class="toggleable">
+            <%= link_to " Answers: #{question.answers.count}" , "#", :class => "toggle-link icon-plus" %>
+            <div id ="transactions_form" class="toggle-target" style="display:none">
+              <table>
+              <th>Answer</th>
+              <th>Created at:</th>
+              <% question.answers.each do |answer| %>
+                <tr>
+                 <td><%= answer.body %></td>
+                 <td><%= "#{time_ago_in_words(answer.created_at)}" %></td>
+                </tr>
+              <% end %>
+              </table>
+            </div>
+          </td>
+      <% else %>
+      <td>No Answers</td>
+      <% end %>
         <td><%= "#{time_ago_in_words(question.created_at)}" %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
