--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <script src="/assets/jquery.js?body=1" type="text/javascript"></script>
   </head>
   <body>
-
+    <div><h1>Look up here!!!</h1></div>
     <div class="navbar navbar-fluid-top">
       <div class="navbar-inner">
         <div class="container-fluid">
