--- a/app/views/answers/_form.html.haml
+++ b/app/views/answers/_form.html.haml
@@ -1,10 +1,8 @@
-<%= simple_form_for [@question, @answer], :html => { :class => 'form-horizontal' } do |f| %>
-%div{:class => 'control-group' }
-<%= f.label :body, 'Answer:', :class => 'control-label' %>
-%div{:class => 'controls'}
-<%= f.text_field :body, :class => 'input-large' %>
-%div{:class => "form-actions"}
-<%= f.button :submit, :class => 'btn-primary' %>
-<%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-question_answers_path, :class => 'btn' %>
-<% end %>
+= simple_form_for [@question, @answer], :html => { :class => 'form-horizontal' } do |f|
+  %div{:class => 'control-group'}
+    = f.label :body, 'Answer:', :class => 'control-label'
+  %div{:class => 'controls'}
+    = f.text_field :body, :class => 'input-large'
+  %div{:class => "form-actions"}
+    = f.button :submit, :class => 'btn-primary'
+    = link_to t('.cancel', :default => t("helpers.links.cancel")), question_path(@question), :class => 'btn'
