--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -14,14 +14,14 @@
   <tbody>
     <% @answers.each do |answer| %>
       <tr>
-        <td><%= link_to answer.id, answer_path(answer) %></td>
-        <td><%= link_to answer.body, answer_path(answer) %></td>
+        <td><%= link_to answer.id, question_answer_path(answer) %></td>
+        <td><%= link_to answer.body, question_answer_path(answer) %></td>
         <td><%=l answer.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_answer_path(answer), :class => 'btn btn-mini' %>
+                      edit_question_answer_path(answer), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      answer_path(answer),
+                      question_answer_path(answer),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -32,5 +32,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_answer_path,
+            new_question_answer_path,
             :class => 'btn btn-primary' %>
