--- a/app/views/answers/_form.html.haml
+++ b/app/views/answers/_form.html.haml
@@ -5,4 +5,5 @@
     = f.text_field :body, :class => 'input-large'
   %div{:class => "form-actions"}
     = f.button :submit, :class => 'btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), question_path(@question), :class => 'btn'
+    = link_to t('.cancel', :default => t("helpers.links.cancel")),
+        question_path(@question), :class => 'btn'
